# taxfolio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  api.cpp  api.hpp  pyproject.toml
.github/workflows/: ci.yml
core/models/: config.hpp  portfolio.hpp  position.cpp  position.hpp  tax_lot.hpp  tax_policy.cpp  tax_policy.hpp  trade.cpp  trade.hpp  types.hpp
core/optimizer/: optimizer.hpp  quadratic.cpp
examples/: large_portfolio.py  quickstart.py  sample_holdings.csv  test_tlh.py
python/: bindings.cpp
taxfolio/: __init__.py  engine.py  harvest.py  holding.py  importers.py  portfolio.py  result.py
taxfolio/data/: substitutes_us.json
tests/: CMakeLists.txt
tests/cpp/: test_api.cpp  test_tax_lot.cpp  test_tax_policy.cpp
tests/python/: test_harvest.py  test_importers.py  test_library.py
