[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "taxfolio"
version = "0.1.0a0"
description = "Tax-aware portfolio optimization for Python, backed by C++20"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "ajtgjmdjp" }]
keywords = ["portfolio", "optimization", "tax", "tax-loss-harvesting", "finance", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.24",
    "yfinance>=0.2",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = ["pytest>=7", "ruff"]

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/taxfolio"
Repository = "https://github.com/ajtgjmdjp/taxfolio"

[tool.scikit-build]
cmake.args = ["-DTAXFOLIO_BUILD_TESTS=OFF"]
wheel.packages = ["taxfolio"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
